public class OpenMeteoService implements WeatherService {
    public WeatherData getWeather() {
        // Implementation to retrieve weather data from the Open Meteo service
        // Replace this with the actual implementation to fetch weather data
        WeatherData weatherData = new WeatherData();
        // Set the weather data properties (temperature, humidity, pressure, wind speed)
        // Demonstrative weather data
        weatherData.setTemperature(25.5);
        weatherData.setHumidity(65.2);
        weatherData.setPressure(1013.5);
        weatherData.setWindSpeed(12.8);
        return weatherData;
    }
}