public class WeatherAPIService implements WeatherService {
    public WeatherData getWeather() {
        // Implementation to retrieve weather data from the Weather API service
        // Replace this with the actual implementation to fetch weather data
        WeatherData weatherData = new WeatherData();
        // Set the weather data properties (temperature, humidity, pressure, wind speed)

        // Demonstrative weather data
        weatherData.setTemperature(23.7);
        weatherData.setHumidity(70.1);
        weatherData.setPressure(1014.2);
        weatherData.setWindSpeed(10.5);
        return weatherData;
    }
}