public interface WeatherService {
    WeatherData getWeather();
}